# memoryprofiler

./: .env.example  .gitignore  README.md  modal_app.py  pyproject.toml
examples/: phi3_t4_fp16.json  phi3_t4_int8.json
src/memoryprofiler/: __init__.py  advisor.py  api.py  cli.py  llm_advisor.py  models.py  profiler.py
